# jamproject-bak

./: .editorconfig  .travis.yml  LICENSE  Makefile  README.rst  setup.cfg  setup.py  tox.ini
docs/: conf.py  contributing.rst  index.rst
docs/skills/: index.rst
specs/arch/: index.rst  skills.rst
src/jamproject/: __init__.py  core.py
src/jamproject/cli/: __init__.py  jam.py  jamt.py
src/jamproject/skills/: __init__.py  standard.py
tests/test_cli/: test_jam.py  test_jamt.py
tests/test_core/: test_unit.py
tests/test_skills/: test_standard.py
