[bumpversion]
current_version = 0.0.1

[bumpversion:file:src/jamproject/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[metadata]
name = jamproject
version = attr:src.jamproject.__version__
description = Japanese Analyze Machine
url = https://github.com/attakei/jamproject
author = Kazuya Takei
author_email = attakei@gmail.com
long_description = file: README.rst
keywords = jamproject
license_file = LICENSE
classifiers = 
	Development Status :: 2 - Pre-Alpha
	Intended Audience :: Developers
	License :: OSI Approved :: Apache Software License
	Natural Language :: Japanese
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
package_dir = 
	=src
packages = find:

[options.packages.find]
where = src

[options.extras_require]
develop = 
	bumpversion
test = 
	flake8
	flake8-docstrings
	flake8-isort

[bdist_wheel]
universal = 1

[flake8]
ignore = D203
exclude = 
	.git,__pycache__,.venv,
	*/conf.py
max-complexity = 10

[isort]
skip = docs/*.py
multi_line_output = 5

